# FactWave

./: .env.example  .gitignore  CLAUDE.md  FRONTEND_API_GUIDE.md  MIGRATION_GUIDE.md  PRD.md  README.md  SETUP_GUIDE.md  accounts.db  agents_config.yaml  build_owid_index.py  example.env  factwave_prototype.py  main.py  package-lock.json  package.json  pyproject.toml  test_integrated.py  test_tools.py  test_websocket_client.py  vite.config.js
backend/: .env.example  TWITTER_ACCOUNTS_GUIDE.md  accounts.db  main.py  manage_twitter_accounts.py  pyproject.toml  run_server.py  test_image_rest_api.py  test_tavily.py  test_tool_usage.py
backend/app/: __init__.py
backend/app/agents/: __init__.py  academic_agent.py  base.py  logic_agent.py  news_agent.py  social_agent.py  statistics_agent.py  super_agent.py
backend/app/api/: __init__.py  server.py
backend/app/config/: prompts.yaml
backend/app/core/: __init__.py  crew.py  streaming_crew.py
backend/app/utils/: __init__.py  llm_config.py  prompt_loader.py  websocket_manager.py
backend/docs/: ACADEMIC_NEWS_TOOLS.md  API_SPECIFICATION.md  BACKEND_GUIDE.md  DEVELOPMENT_GUIDE.md  FRONTEND_GUIDE.md  OWID_RAG_SYSTEM.md
backend/owid_datasets/access-to-healthcare/: readme.md
backend/owid_datasets/air-pollution/: download_summary.json  pm25-air-pollution.metadata.json  readme.md
backend/owid_datasets/arctic-ice/: arctic-sea-ice.csv  arctic-sea-ice.metadata.json  download_summary.json  readme.md
backend/owid_datasets/biodiversity/: readme.md
backend/owid_datasets/carbon-intensity/: carbon-intensity-electricity.metadata.json  readme.md
backend/owid_datasets/co2-per-capita/: co-emissions-per-capita.csv  co-emissions-per-capita.metadata.json  download_summary.json  readme.md
backend/owid_datasets/covid-deaths/: covid-deaths.metadata.json  readme.md
backend/owid_datasets/covid-vaccinations/: people-vaccinated-covid.csv  people-vaccinated-covid.metadata.json
backend/owid_datasets/diabetes/: diabetes-prevalence.metadata.json  download_summary.json
backend/owid_datasets/emissions-by-sector/: download_summary.json  ghg-emissions-by-sector.metadata.json
backend/owid_datasets/energy-consumption/: per-capita-energy-use.metadata.json  readme.md
backend/owid_datasets/financial-inclusion/: account-at-financial-institution.csv  readme.md
backend/owid_datasets/forest-area/: download_summary.json  forest-area-as-share-of-land-area.metadata.json  readme.md
backend/owid_datasets/fossil-fuel/: readme.md
backend/owid_datasets/gdp-growth/: readme.md  real-gdp-growth.csv
backend/owid_datasets/government-effectiveness/: readme.md
backend/owid_datasets/greenhouse-gas/: readme.md
backend/owid_datasets/land-use/: agricultural-land.metadata.json
backend/owid_datasets/life-expectancy/: life-expectancy.metadata.json
backend/owid_datasets/material-footprint/: material-footprint-per-capita.metadata.json  readme.md
backend/owid_enhanced_vectordb/: chroma.sqlite3
backend/tests/: setup_twitter.py  test_ai_image_detector.py  test_tool_usage.py  test_tools.py  test_youtube_tool.py  test_youtube_video_analyzer.py
(+167 files in other folders)
